# arohittalari.github.io

./: .nojekyll  Module2Lab2.html  Module2Lab2.qmd  README.md  _quarto.yml  about.html  about.qmd  contact.html  contact.qmd  cv.html  cv.qmd  index.html  index.qmd  projects.html  projects.qmd  robots.txt  search.json  sitemap.xml
_site/: Module2Lab2.html  cv.html  index.html  projects.html  search.json
docs/: about.html  contact.html  index.html
my-poetry-project/: pyproject.toml
